[package]
name = "stun_codec_blazh"
version = "0.1.13"
authors = ["blazh <blazh@163.com>"]
description = "fork from stun_codec"
homepage = "https://github.com/blazood/stun_codec"
repository = "https://github.com/blazood/stun_codec"
readme = "README.md"
keywords = ["STUN"]
categories = ["encoding"]
license = "MIT"
edition = "2021"

[badges]
coveralls = {repository = "sile/stun_codec"}

[dependencies]
bytecodec = "0.4"
byteorder = "1"
crc = "3"
hmac = "0.12.1"
md5 = "0.7"
sha1 = "0.10.6"
trackable = "1"
